# popgen

./: FaSPPfPA.cabal  README.md  popgen.cabal
app/: Main.hs
src/Helper/: BooleanCircuit.hs  Debug.hs  List.hs  Math.hs  Tuple.hs
src/InputOutput/: MapInput.hs  MapOutput.hs
src/PresburgerMapper/: DoublePhi.hs  Remainder.hs  Threshold.hs  Union.hs
src/Transformer/: Autarkify.hs  Binarise.hs  Distribute.hs  Focalise.hs  Preprocess.hs
src/Types/: PopulationComputer.hs  Predicates.hs
test/Tests/: AutarkifyTests.hs  BinariseTests.hs  BoolCombTests.hs  DistributeTests.hs  FocaliseTests.hs  TestCases.hs  TestHelper.hs  Tests.hs
