cabal-version:      2.4
name:               Code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JoKurth
maintainer:         71062996+JoKurth@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Types.PopulationComputer
    other-modules:    Types.Predicates

    other-modules:    Helper.Math
    other-modules:    Helper.List

    other-modules:    InputOutput.MapInput

    other-modules:    PresburgerMapper.Remainder
    other-modules:    PresburgerMapper.Threshold
    other-modules:    PresburgerMapper.Union

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      containers ^>= 0.6.5.1,
                      multiset ^>= 0.3.4.3,
                      split ^>= 0.2.3.5,
                      regex-tdfa ^>= 1.3.2,
                      parsec ^>= 3.1.16,
                      boolexpr ^>= 0.2
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
