cabal-version:      2.4
name:               popgen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JoKurth
maintainer:         71062996+JoKurth@users.noreply.github.com


executable popgen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Types.PopulationComputer
    other-modules:    Types.Predicates

    other-modules:    Helper.Math
    other-modules:    Helper.List
    other-modules:    Helper.Tuple
    other-modules:    Helper.BooleanCircuit
    other-modules:    Helper.Debug

    other-modules:    InputOutput.MapInput
    other-modules:    InputOutput.MapOutput

    other-modules:    PresburgerMapper.Remainder
    other-modules:    PresburgerMapper.Threshold
    other-modules:    PresburgerMapper.Union
    other-modules:    PresburgerMapper.DoublePhi

    other-modules:    Transformer.Preprocess
    other-modules:    Transformer.Binarise
    other-modules:    Transformer.Focalise
    other-modules:    Transformer.Autarkify
    other-modules:    Transformer.Distribute

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.4.0,
                      containers ^>= 0.6.5.1,
                      multiset ^>= 0.3.4.3,
                      split ^>= 0.2.3.5,
                      regex-tdfa ^>= 1.3.2,
                      parsec ^>= 3.1.16,
                      boolexpr ^>= 0.2,
                      unordered-containers ^>= 0.2.19,
                      process ^>= 1.6.18
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010

test-suite tests
    main-is:          Tests/Tests.hs
    type:             exitcode-stdio-1.0

    other-modules:    Types.PopulationComputer
    other-modules:    Types.Predicates

    other-modules:    Helper.Math
    other-modules:    Helper.List
    other-modules:    Helper.Tuple
    other-modules:    Helper.BooleanCircuit
    other-modules:    Helper.Debug

    other-modules:    InputOutput.MapInput
    other-modules:    InputOutput.MapOutput

    other-modules:    PresburgerMapper.Remainder
    other-modules:    PresburgerMapper.Threshold
    other-modules:    PresburgerMapper.Union
    other-modules:    PresburgerMapper.DoublePhi

    other-modules:    Transformer.Preprocess
    other-modules:    Transformer.Binarise
    other-modules:    Transformer.Focalise
    other-modules:    Transformer.Autarkify
    other-modules:    Transformer.Distribute

    other-modules:    Tests.TestCases
    other-modules:    Tests.BinariseTests
    other-modules:    Tests.FocaliseTests
    other-modules:    Tests.AutarkifyTests
    other-modules:    Tests.DistributeTests
    other-modules:    Tests.BoolCombTests

    other-modules:    Tests.TestHelper

    hs-source-dirs:   app,
                      src,
                      test
    build-depends:    base ^>= 4.16.4.0,
                      HUnit ^>= 1.6.2,
                      containers ^>= 0.6.5.1,
                      multiset ^>= 0.3.4.3,
                      split ^>= 0.2.3.5,
                      regex-tdfa ^>= 1.3.2,
                      parsec ^>= 3.1.16,
                      boolexpr ^>= 0.2,
                      unordered-containers ^>= 0.2.19,
                      process ^>= 1.6.18
    default-language: Haskell2010
